Gradle Fixed - New Setup Instructions