@@ -4,9 +4,8 @@
 ## Setup Instuctions
  > ### Setting up using eclipse
  > 1.  Import project via git - using this link (https://github.com/Deys2000/actual-EECS2311Group15).
- > 2.  Once imported, click on the project and navigate to **buidPath**. ![buidPath](buidPath.png)
- > 3.  Under **Classpath**, select the JRE Sytem Library\[version](unbound) and click on edit, to the right, and select the latest JRE. 
- > 4.  Navigate to the nav bar, on the top, select ***Run/Run Configurations.*** On drop down to the left select ***java Application.*** You should see ***Main*** under that list. Select it and navigate to the ***Arguments*** tab. 
- > Under ***VM arguments*** , add the following line `--module-path "javafx-sdk-15.0.1/lib" --add-modules javafx.controls,javafx.fxml` ![runConfigs](runConfigs.png)
- > 5.  Now the project should be all setup. Navigate to Main and run the program. :)
+ > 2.  Once imported, navigate to the Window tab at the top, then Show View, and click on Other... ![windowToOther](windowToOther.png)
+ > 3.  A new window called Show View will pop up. Scroll down to the Gradle folder, open it, select Gradle Tasks, then click Open. ![showViewToGradle](showViewToGradle.png)
+ > 4.  A new view called Gradle Tasks should be visible in the main screen of Eclipse. In that view, navigate to the project, open the build folder and double click "build". Gradle will now prepare the project to be run. A new view called Gradle Executions should pop up and you can view the progress there. ![gradleToBuild](gradleToBuild.png)
+ > 5.  Once the project is all built, navigate back to the Gradle Tasks view, open up the application folder, and then double click "run" to run the program! ![buildToRun](buildToRun.png)
  
